# cooperate

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: test-cooperate.yml
examples/: compare_solvers.rs  connect_four.rs  tic_tac_toe.rs
src/: cooperate.rs  global_data.rs  lib.rs  search_worker.rs  stack.rs  table.rs
src/solvers/: alpha_beta.rs  fuzz_solvers.rs  fuzz_table_solvers.rs  iter_deep.rs  mod.rs  simple.rs  test_connect_three.rs  test_tic_tac_toe.rs  ttable_alpha_beta.rs  ttable_solver.rs
src/test/: gomoku.rs  mod.rs  nim.rs  serial_search.rs  tic_tac_toe.rs
src/test/solvers/: alpha_beta.rs  fuzz_solvers.rs  mod.rs  simple.rs  test_connect_three.rs  test_tic_tac_toe.rs  ttable_ab.rs  ttable_solver.rs
