[package]
name = "cooperate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract_game = { git = "https://github.com/ClaytonKnittel/abstract-game.git", rev = "ef5547083b39e00e8b2783888b7b80193a8cda99" }
crossbeam-queue = "0.3"
dashmap = "5.5"
itertools = "0.14.0"
rand = "0.9.2"

[dev-dependencies]
googletest = "0.14.2"
rstest = "0.26.1"
rstest_reuse = "0.7.0"

[profile.test]
inherits = "dev"
opt-level = 3

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = "fat"
